# qsimjy

./: LICENSE  README.md  pyproject.toml  setup.py
qsimjy/: __init__.py  magnet.py  quantumdot.py  solver.py
qsimjy/optimization/: __init__.py  genetic.py
src/: CMakeLists.txt  c_magcalc_pybind.cpp  c_potcalc_pybind.cpp
