[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "qsimjy"
version = "0.1.0"
description = "A Python package that calculates electric and magnetic fields of a semiconductor quantum dot device with a cobalt micromagnet."
authors = [
    { name = "Jonginn Yun", email = "alyuuv@snu.ac.kr" },
    { name = "Jonginn Yun", email = "alyuuv@stanford.edu" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "ezdxf",
    "shapely",
    "ubermag"
]
